--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,20 @@
-apply plugin: 'java'
+buildscript {
+    ext {
+        springbootVersion = '2.3.5.RELEASE'
+        springCloudVersion = 'Greenwich.SR2'
+        springIntegrationVersion = '5.2.0.M1'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}")
+    }
+}
+
+apply plugin: "java"
+apply plugin: "org.springframework.boot"
+apply plugin: "io.spring.dependency-management"
 
 version = '1.0-SNAPSHOT'
 
@@ -7,8 +23,33 @@ repositories {
 }
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-dependencies:${springbootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-web:${springbootVersion}")
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '1.0.2.RELEASE'
+    compile('org.springframework:spring-tx')
+    compile('org.springframework:spring-test')
+    compile('org.springframework:spring-context')
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.5.RELEASE'
+    compileOnly('org.springframework.boot:spring-boot-configuration-processor:2.0.1.RELEASE')
+
     testCompile 'junit:junit:4.12'
     testCompile 'info.cukes:cucumber-java8:1.2.5',
             'info.cukes:cucumber-junit:1.2.5'
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+    compile "org.projectlombok:lombok:1.18.10"
+    annotationProcessor "org.projectlombok:lombok:1.18.10"
+
+    compile('org.springframework:spring-web')
+    compile('org.springframework.boot:spring-boot-starter') {
+        exclude module: "org.springframework.boot:spring-boot-starter-logging"
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-toslf4j'
+    }
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    testCompile group: 'junit', name: 'junit', version: '4.13.1'
+    testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.1'
+    testCompile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.1'
+    testCompile group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
+
+
 }
