--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ dependencies {
         exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
         exclude group: 'org.apache.logging.log4j', module: 'log4j-toslf4j'
     }
+
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+
+
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'junit', name: 'junit', version: '4.13.1'
     testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.1'
