--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,20 @@
 buildscript {
-    ext {
-        springbootVersion = '2.3.5.RELEASE'
-        springCloudVersion = 'Greenwich.SR2'
-        springIntegrationVersion = '5.2.0.M1'
-    }
+//    ext {
+//        springbootVersion = '3.1.0'
+//        springCloudVersion = 'Greenwich.SR2'
+//        springIntegrationVersion = '5.2.0.M1'
+//    }
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}")
+//        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}")
     }
 }
 
 apply plugin: "java"
-apply plugin: "org.springframework.boot"
-apply plugin: "io.spring.dependency-management"
+//apply plugin: "org.springframework.boot"
+//apply plugin: "io.spring.dependency-management"
 
 version = '1.0-SNAPSHOT'
 
@@ -23,37 +23,39 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-dependencies:${springbootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-web:${springbootVersion}")
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '1.0.2.RELEASE'
-    compile('org.springframework:spring-tx')
-    compile('org.springframework:spring-test')
-    compile('org.springframework:spring-context')
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.5.RELEASE'
-    compileOnly('org.springframework.boot:spring-boot-configuration-processor:2.0.1.RELEASE')
+//    implementation("org.springframework.boot:spring-boot-dependencies:3.1.0")
+//    implementation("org.springframework.boot:spring-boot-starter-web:${springbootVersion}")
+//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '1.0.2.RELEASE'
+//    implementation('org.springframework:spring-tx:6.0.6')
+//    implementation('org.springframework:spring-test:6.0.6')
+//    implementation('org.springframework:spring-context:6.0.9')
+//    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.5.RELEASE'
+//    compileOnly('org.springframework.boot:spring-boot-configuration-processor:3.0.4')
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'info.cukes:cucumber-java8:1.2.5',
-            'info.cukes:cucumber-junit:1.2.5'
-    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-    compile "org.projectlombok:lombok:1.18.10"
-    annotationProcessor "org.projectlombok:lombok:1.18.10"
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'info.cukes:cucumber-java8:1.2.5',
+            'info.cukes:cucumber-junit:1.2.6'
+    testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+    implementation 'org.projectlombok:lombok:1.18.26'
+//    annotationProcessor 'org.projectlombok:lombok:1.18.26'
 
-    compile('org.springframework:spring-web')
-    compile('org.springframework.boot:spring-boot-starter') {
-        exclude module: "org.springframework.boot:spring-boot-starter-logging"
-        exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
-        exclude group: 'org.apache.logging.log4j', module: 'log4j-toslf4j'
-    }
+//    implementation('org.springframework:spring-web:6.0.6')
+//    implementation('org.springframework.boot:spring-boot-starter:3.1.0') {
+//        exclude module: "org.springframework.boot:spring-boot-starter-logging"
+//        exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
+//        exclude group: 'org.apache.logging.log4j', module: 'log4j-toslf4j'
+//    }
 
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
 
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-    testCompile group: 'junit', name: 'junit', version: '4.13.1'
-    testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.1'
-    testCompile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.1'
-    testCompile group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
+    testImplementation group: 'org.hamcrest', name: 'ha' +
+            'mcrest-all', version: '1.3'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.1'
+    testImplementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.1'
+    testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
 
+    compileOnly 'org.projectlombok:lombok:1.18.26'
 
 }
